--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
         <a class="footer-link" href="https://www.linkedin.com/in/sachin-kaundal-9bb4318b/">LinkedIn</a>
         <a class="footer-link" href="https://github.com/imsachink">Github</a>
         <a class="footer-link" href="https://www.instagram.com/imsachink">Instagram</a>
-        <p class="end">© 2020 Sachin Kaundal</p>
+        <p class="end">© 2020 Sachin Kaundal.</p>
 </body>
 </html>
